{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 172,
  "lineage": "bc4e949b-2693-ed3e-628d-d19ed31bffc9",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/app-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "app-ingress",
                "namespace": "default",
                "resource_version": "77691",
                "uid": "cf6fc526-4a7a-44e8-a561-d60844cdd8b4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "myapp.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "foo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8085
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bar",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8086
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "boom",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8087
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress_canary",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "bar",
          "schema_version": 0,
          "attributes": {
            "id": "default/bar-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/canary": "true",
                  "nginx.ingress.kubernetes.io/canary-weight": "25",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "bar-ingress",
                "namespace": "default",
                "resource_version": "77688",
                "uid": "84928066-3905-494f-ab4f-be084905f0f4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "myapp.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bar",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8086
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.app"
          ]
        },
        {
          "index_key": "boom",
          "schema_version": 0,
          "attributes": {
            "id": "default/boom-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/canary": "true",
                  "nginx.ingress.kubernetes.io/canary-weight": "50",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "boom-ingress",
                "namespace": "default",
                "resource_version": "77690",
                "uid": "99b324d9-6551-4c77-8171-c5cf0b516c96"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "myapp.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "boom",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8087
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.app"
          ]
        },
        {
          "index_key": "foo",
          "schema_version": 0,
          "attributes": {
            "id": "default/foo-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/canary": "true",
                  "nginx.ingress.kubernetes.io/canary-weight": "25",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "foo-ingress",
                "namespace": "default",
                "resource_version": "77689",
                "uid": "e3ffe08f-6e53-40e7-8cb7-918d5cd0a840"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "myapp.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "foo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8085
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/test",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "bar",
          "schema_version": 1,
          "attributes": {
            "id": "default/bar",
            "metadata": [
              {
                "generation": 0,
                "name": "bar",
                "namespace": "default",
                "resource_version": "77666",
                "uid": "a0535fd5-66cb-42f2-8178-2ff47d3b12f1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.105.100.180",
                "cluster_ips": [
                  "10.105.100.180"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8086,
                    "protocol": "TCP",
                    "target_port": "8086"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "bar"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        },
        {
          "index_key": "boom",
          "schema_version": 1,
          "attributes": {
            "id": "default/boom",
            "metadata": [
              {
                "generation": 0,
                "name": "boom",
                "namespace": "default",
                "resource_version": "77675",
                "uid": "ad6ca14d-8325-48d2-955f-768a75607762"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.67.78",
                "cluster_ips": [
                  "10.102.67.78"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8087,
                    "protocol": "TCP",
                    "target_port": "8087"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "boom"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        },
        {
          "index_key": "foo",
          "schema_version": 1,
          "attributes": {
            "id": "default/foo",
            "metadata": [
              {
                "generation": 0,
                "name": "foo",
                "namespace": "default",
                "resource_version": "77662",
                "uid": "10095714-931d-4b7c-b67f-3edf592ee8b0"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.111.212.19",
                "cluster_ips": [
                  "10.111.212.19"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8085,
                    "protocol": "TCP",
                    "target_port": "8085"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "foo"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}